"Viewport render image/animation" don't process corectly Display As [bounds and wires] #63659

Closed
opened 2019-04-16 11:53:39 +02:00 by Ruslan · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 560/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.80 (sub 57), branch: master, commit date: 2019-04-14 19:18, hash: 860a9f979d
Worked: (optional)

Short description of error
All this for Workbench render engine.
If you decide to render what you see inside viewport, by pressing View>Viewport Render Image. if will have two difference on rendered image.
First: if you've chosen some different mode than solid mesh (Display as wires or bounds) - it will have different result in viewport and at the render. On render it always shows wire+mesh or bound+mesh.
And second one - that "axis grid" on render looks a bit another than at viewport. On render it more fat (less appeal).

Exact steps for others to reproduce the error
You can open file and then press View>ViewportRenderImage
file.blend
or Steps:
Open default. Choose Render engine: Workbench. Press Z ->solid mode. Go to ViewportShading menuand choose Color: Object mode. Go to Output menu and change render % resolution to 43%
Delete cube and light. PressNum0 [camera view] Put plane and scale it to fill camera shoot. Go to properties>Object>ViewportDisplay and choose another then white color (not white - for better visibility axis grid)
Put Monkey. Go to Properties>Object>ViewportDisplay>DisplayAs and choose at first Wire [and same issue with bounds].
Then press View>Viewport render image/animation. Compare results: what you see in viewport and what you see as viewport-rendered. Done.
You will see that grid lines more thiker and monkey have solid+mesh

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 560/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.80 (sub 57), branch: master, commit date: 2019-04-14 19:18, hash: `860a9f979d` Worked: (optional) **Short description of error** All this for Workbench render engine. If you decide to render what you see inside viewport, by pressing View>Viewport Render Image. if will have two difference on rendered image. First: if you've chosen some different mode than solid mesh (Display as wires or bounds) - it will have different result in viewport and at the render. On render it always shows wire+mesh or bound+mesh. And second one - that "axis grid" on render looks a bit another than at viewport. On render it more fat (less appeal). **Exact steps for others to reproduce the error** You can open file and then press *View>ViewportRenderImage* [file.blend](https://archive.blender.org/developer/F6951054/file.blend) or Steps: Open default. Choose Render engine: *Workbench*. Press Z ->*solid mode*. Go to *ViewportShading menu*and choose *Color: Object mode*. Go to *Output* menu and change render *% resolution* to 43% Delete cube and light. Press*Num0* [camera view] Put plane and scale it to fill camera shoot. Go to *properties>Object>ViewportDisplay* and choose another then white color (not white - for better visibility axis grid) Put Monkey. Go to *Properties>Object>ViewportDisplay>DisplayAs* and choose at first *Wire* [and same issue with *bounds*]. Then press *View>Viewport render image/animation*. Compare results: what you see in viewport and what you see as viewport-rendered. Done. **You will see that grid lines more thiker and monkey have solid+mesh**
Author

Added subscriber: @rs2128

Added subscriber: @rs2128
Clément Foucault was assigned by Sebastian Parborg 2019-04-16 14:30:09 +02:00

Added subscriber: @crantisz

Added subscriber: @crantisz

Affects on linux too

Operating system: Linux-4.15.0-54-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Affects on linux too Operating system: Linux-4.15.0-54-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

This issue was referenced by 3f6e17ddaf

This issue was referenced by 3f6e17ddaf87ba81c73c107e5dc5504646adde96

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63659
No description provided.