Fix T63659 "Viewport render image" don't process corectly "Display As" option