source/blender/draw/engines/workbench/workbench_deferred.c
@@ -1014,7 +1014,7 @@ void workbench_deferred_solid_cache_populate(WORKBENCH_Data *vedata, Object *ob)
   if (!(DRW_object_visibility_in_active_context(ob) & OB_VISIBLE_SELF)) {
     return;
   }
-  if ((ob->dt < OB_SOLID) && !DRW_state_is_image_render()) {
+  if ((ob->dt < OB_SOLID) && !DRW_state_is_scene_render()) {
     return;
   }
 
